# autoDashboard

./: .env  README.md  pyproject.toml  run_backend.py  run_frontend.py  test_app.py  test_backend.py  test_basic.py
autodashboard/: __init__.py
autodashboard/backend/: __init__.py  analysis.py  llm_agent.py  main.py  pdf_report.py
autodashboard/frontend/: __init__.py  app.py
autodashboard/shared/: __init__.py  utils.py
